--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "Native Wrapper for <errno.h>",
   "author": "Jacob Groundwater <groundwater@gmail.com>",
   "license": "MIT",
-  "main": "errno.js"
+  "main": "errno.js",
+  "dependencies" : {
+    "nan": "*"
+  }
 }
