--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Jacob Groundwater <groundwater@gmail.com>",
   "license": "MIT",
   "main": "errno.js",
-  "dependencies" : {
-    "nan": "*"
+  "dependencies": {
+    "nan": "^2.0.9"
   }
 }
